# github-issue-management-automation

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: base-rule.mdc  cli-config.mdc  code-style.mdc  crewai-patterns.mdc  custom-tools.mdc  llm-config.mdc  project-structure.mdc  yaml-config.mdc
src/github_issue_management/: __init__.py  crew.py  main.py
src/github_issue_management/config/: agents.yaml  tasks.yaml
src/github_issue_management/tools/: __init__.py  github_tools.py
